Mar 22, 2023
  CurationDafGenerator -- suppressed generation of 'condition_free_text' fields to avoid having
    duplicate text in summaries on the Alliance website
    -- suppress generation of 'with_gene_curies' having RGD ids

Feb 23, 2023
  CurationGeneGenerator -- fixed an issue with gene_full_name_dto fields

Feb 17, 2023
  CurationDafGenerator -- added special rules for handling IGI annotations

Feb 14, 2023
  CurationDafGenerator -- upgraded to linkml_model 1.5.0

Feb 08, 2023
  CurationAlleleGenerator -- upgraded to linkml_model 1.5.0

Feb 02, 2023
  CurationGeneGenerator -- upgraded to linkml_model 1.5.0
  CurationAGMGenerator -- upgraded to linkml_model 1.5.0

Dec 05, 2022
  CurationAlleleGenerator -- linkml_model 1.3.2: added export of 'references'

Nov 11, 2022
  updated script to submit HTVCF data

Nov 10, 2022
  VariantVcfGenerator - added export of EVA rn7 in last column and rs ids in ID column

Oct 11, 2022
  CurationDafGenerator - KANBAN-193 - 'asserted_gene' populated for disease_allele_ingest_set
                         corresponding disease gene annotations removed from disease_gene_ingest_set
  CurationDafGenerator - KANBAN-193 - 'asserted_gene' and 'asserted_allele' populated for disease_agm_ingest_set
                         corresponding disease allele/gene annotations removed

Sep 19, 2022
  CurationDafGenerator - KANBAN-219 - Update 'creation_date', ‘data_last_modified’ and ‘modified_by’
    to ‘date_created', 'date_updated’ and ‘updated_by' in RGD and HUMAN disease annotation submissions
  CurationDafGenerator - KANBAN-212: reviewed XCO to ZECO mappings

May 17, 2022
  added CurationAlleleGenerator

May 09, 2022
  CurationGeneGenerator, CurationAGMGenerator -- added

May 02, 2022
  CurationDafGenerator -- added 'internal' field to comply with new schema

Mar 28, 2022
  CurationDafGenerator -- suppressed export of WITH info field

Mar 18, 2022
  CurationDafGenerator -- note_type fixed to be 'disease_note' instead of 'comment'